# cloudwatch_logs_processor

./: Cargo.toml  Justfile
src/: cloudwatch_logs.rs  dynamodb.rs  error.rs  event.rs  function_info.rs  lib.rs  main.rs  store.rs  sts.rs  test_util.rs
