[package]
name = "cloudwatch-log-processor"
version = "0.1.0"
edition = "2021"
publish = false


# Use cargo-edit(https://github.com/killercup/cargo-edit#installation)
# to manage dependencies.
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-config = "0.13.0"
aws-sdk-cloudwatchlogs = "0.13.0"
aws-sdk-dynamodb = "0.13.0"
aws-sdk-iam = "0.13.0"
aws-sdk-sts = "0.13.0"
aws-types = { version = "0.13.0", features = ["hardcoded-credentials"] }
base64 = "0.13.0"
flate2 = "1.0.24"
lambda_runtime = "0.5.1"
serde = "1.0.137"
serde_json = "1.0.81"
thiserror = "1.0.31"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
